--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Best Tour Plan - Hotel Booking</title>
   <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Nunito:wght@400;700&display=swap"
     rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header class="header">
