create: styles for header

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <a href="#" class="logo">
           <img 
            src="img/horizontal-logo.svg" 
-           alt="logo: Best Tour Plan" 
+           alt="Logo: Best Tour Plan" 
            class="logo__image">
         </a>
 
-        <form action="#" class="search">
+        <form action="#" class="search header__search">
           <input type="text" class="search__input"
           placeholder="Search Location">
           <button class="search__button">
@@ -29,7 +29,7 @@
         </form>
 
        <a href="#" class="user">
-         <img src="img/user.jpg" alt="avatar: Nathan" class="user__avatar"/>
+         <img src="img/user.jpg" alt="Avatar: Nathan" class="user__avatar"/>
          <span class="user__name">Nathan</span>
        </a>
        <!-- /.user -->
