--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header class="header">
+  <header class="navbar">
     <div class="container">
-      <div class="header-top">
+      <div class="navbar-top">
         <a href="#" class="logo">
           <img 
            src="img/horizontal-logo.svg" 
@@ -20,7 +20,7 @@
            class="logo__image">
         </a>
 
-        <form action="#" class="search header__search">
+        <form action="#" class="search navbar__search">
           <input type="text" class="search__input"
           placeholder="Search Location">
           <button class="search__button">
@@ -34,22 +34,22 @@
        </a>
        <!-- /.user -->
       </div>
-      <!-- /.header-top -->
+      <!-- /.navbar-top -->
 
-<!-- возможны правки в поисковой строке -->
-      <nav class="header-menu">
+       <!-- возможны правки в поисковой строке -->
+      <nav class="navbar-menu">
         <ul>
-          <li class="header-menu__item"><a href="#" class="header-menu__link">All Deals</a></li>
-          <li class="header-menu__item"><a href="#" class="header-menu__link">Hotels</a></li>
-          <li class="header-menu__item"><a href="#" class="header-menu__link">Activities</a></li>
-          <li class="header-menu__item"><a href="#" class="header-menu__link">Hotel Day Packages</a></li>
-          <li class="header-menu__item"><a href="#" class="header-menu__link">Restaurants</a></li>
-          <li class="header-menu__item"><a href="#" class="header-menu__link">Events</a></li>
-          <li class="header-menu__item"><a href="#" class="header-menu__link">Rodrigues</a></li>
+          <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">All Deals</a></li>
+          <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Hotels</a></li>
+          <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Activities</a></li>
+          <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Hotel Day Packages</a></li>
+          <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Restaurants</a></li>
+          <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Events</a></li>
+          <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Rodrigues</a></li>
         </ul>
       </nav>
 
-      <!-- /.header-menu -->
+      <!-- /.navbar-menu -->
     </div>
     <!-- /.container -->
   </header>
