--- a/index.html
+++ b/index.html
@@ -35,23 +35,23 @@
        <!-- /.user -->
       </div>
       <!-- /.navbar-top -->
-
-       <!-- возможны правки в поисковой строке -->
-      <nav class="navbar-menu">
-        <ul>
-          <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">All Deals</a></li>
-          <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Hotels</a></li>
-          <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Activities</a></li>
-          <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Hotel Day Packages</a></li>
-          <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Restaurants</a></li>
-          <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Events</a></li>
-          <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Rodrigues</a></li>
-        </ul>
-      </nav>
-
-      <!-- /.navbar-menu -->
     </div>
     <!-- /.container -->
+    <div class="navbar-bottom">
+      <div class="container">
+          <ul class="navbar-menu">
+            <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">All Deals</a></li>
+            <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Hotels</a></li>
+            <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Activities</a></li>
+            <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Hotel Day Packages</a></li>
+            <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Restaurants</a></li>
+            <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Events</a></li>
+            <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Rodrigues</a></li>
+          </ul>
+        <!-- /.navbar-menu -->
+      </div>
+      <!-- /.container -->
+    </div>
   </header>
 </body>
 </html>
