--- a/index.html
+++ b/index.html
@@ -28,16 +28,21 @@
           </button>
         </form>
 
-       <a href="#" class="user">
+       <a href="#" class="user navbar__user">
          <img src="img/user.jpg" alt="Avatar: Nathan" class="user__avatar"/>
          <span class="user__name">Nathan</span>
        </a>
        <!-- /.user -->
+       <button class="menu-button navbar-top__menu-button">
+         <span class="menu-button__line"></span>
+         <span class="menu-button__line"></span>
+         <span class="menu-button__line"></span>
+       </button>
       </div>
       <!-- /.navbar-top -->
     </div>
     <!-- /.container -->
-    <div class="navbar-bottom">
+    <div class="navbar-buttom">
       <div class="container">
           <ul class="navbar-menu">
             <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">All Deals</a></li>
