sreate: slide in swiper

--- a/index.html
+++ b/index.html
@@ -109,9 +109,11 @@
             <!-- Additional required wrapper -->
             <div class="swiper-wrapper">
               <!-- Slides -->
-              <div class="swiper-slide"><img src="img/slide.jpg" alt=""></div>
-              <div class="swiper-slide"><img src="img/slide.jpg" alt=""></div>
-              <div class="swiper-slide"><img src="img/slide.jpg" alt=""></div>
+              <div class="swiper-slide"><img src="img/slide1.jpg" alt=""></div>
+              <div class="swiper-slide"><img src="img/slide2.jpg" alt=""></div>
+              <div class="swiper-slide"><img src="img/slide3.jpg" alt=""></div>
+              <div class="swiper-slide"><img src="img/slide4.jpg" alt=""></div>
+              <div class="swiper-slide"><img src="img/slide5.jpg" alt=""></div>
             </div>
             <!-- If we need navigation buttons -->
             <button class="slider-button slider-button--prev"></button>
