create: added map in hotel-section

--- a/index.html
+++ b/index.html
@@ -155,7 +155,12 @@
             <button class="button booking__button">View Other Options</button>
           </div>
           <!-- /.booking -->
-          <div class="map"></div>
+          <div class="map">
+            <iframe
+              src="https://yandex.ru/map-widget/v1/?um=constructor%3A130efb0e3365c1b2656b1890160ef5d304fc8ffd8d42bc6499c51d10a523f7a8&amp;
+              source=constructor"
+              width="347" height="213" frameborder="0"></iframe>
+          </div>
           <!-- /.map -->
         </div>
         <!-- /.hotel-right -->
