--- a/index.html
+++ b/index.html
@@ -103,17 +103,17 @@
       </div>
       <!-- /.hotel-info -->
       <div class="hotel-grid">
-        <div class="slider">
+        <div class="slider hotel__slider">
           <!-- Slider main container -->
           <div class="swiper-container">
             <!-- Additional required wrapper -->
             <div class="swiper-wrapper">
               <!-- Slides -->
-              <div class="swiper-slide"><img src="img/slide1.jpg" alt=""></div>
-              <div class="swiper-slide"><img src="img/slide2.jpg" alt=""></div>
-              <div class="swiper-slide"><img src="img/slide3.jpg" alt=""></div>
-              <div class="swiper-slide"><img src="img/slide4.jpg" alt=""></div>
-              <div class="swiper-slide"><img src="img/slide5.jpg" alt=""></div>
+              <div class="swiper-slide"><img class="swiper-slide__image" src="img/slide1.jpg" alt=""></div>
+              <div class="swiper-slide"><img class="swiper-slide__image" src="img/slide2.jpg" alt=""></div>
+              <div class="swiper-slide"><img class="swiper-slide__image" src="img/slide3.jpg" alt=""></div>
+              <div class="swiper-slide"><img class="swiper-slide__image" src="img/slide4.jpg" alt=""></div>
+              <div class="swiper-slide"><img class="swiper-slide__image" src="img/slide5.jpg" alt=""></div>
             </div>
             <!-- If we need navigation buttons -->
             <button class="slider-button slider-button--prev"></button>
@@ -121,7 +121,7 @@
           </div>
           <!-- /.swiper-container -->
         </div>
-        <!-- /.slider -->
+        <!-- /.slider hotel__slider-->
         <div class="hotel-right">
           <div class="booking">
             <div class="booking__info">
@@ -159,7 +159,7 @@
             <iframe
               src="https://yandex.ru/map-widget/v1/?um=constructor%3A130efb0e3365c1b2656b1890160ef5d304fc8ffd8d42bc6499c51d10a523f7a8&amp;
               source=constructor"
-              width="347" height="213" frameborder="0"></iframe>
+              width="100%" height="213" frameborder="0"></iframe>
           </div>
           <!-- /.map -->
         </div>
