create: added reviews section+fixed hotel slider

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <img src="img/Star.svg" alt="star">
             <img src="img/Star.svg" alt="star">
             <img src="img/Star.svg" alt="star">
-        </div>
+          </div>
         <h1 class="hotel-name hotel-info__name">GRAND HILTON HOTEL</h1>
         <span class="offer hotel-info__offer">Flash Offer</span>
       </div>
@@ -103,25 +103,24 @@
       </div>
       <!-- /.hotel-info -->
       <div class="hotel-grid">
-        <div class="slider hotel__slider">
+ 
           <!-- Slider main container -->
-          <div class="swiper-container">
+          <div class="swiper-container hotel-slider hotel__slider">
             <!-- Additional required wrapper -->
             <div class="swiper-wrapper">
               <!-- Slides -->
-              <div class="swiper-slide"><img class="swiper-slide__image" src="img/slide1.jpg" alt=""></div>
-              <div class="swiper-slide"><img class="swiper-slide__image" src="img/slide2.jpg" alt=""></div>
-              <div class="swiper-slide"><img class="swiper-slide__image" src="img/slide3.jpg" alt=""></div>
-              <div class="swiper-slide"><img class="swiper-slide__image" src="img/slide4.jpg" alt=""></div>
-              <div class="swiper-slide"><img class="swiper-slide__image" src="img/slide5.jpg" alt=""></div>
+              <div class="swiper-slide hotel-slider__item"><img class="swiper-slide__image" src="img/slide1.jpg" alt=""></div>
+              <div class="swiper-slide hotel-slider__item"><img class="swiper-slide__image" src="img/slide2.jpg" alt=""></div>
+              <div class="swiper-slide hotel-slider__item"><img class="swiper-slide__image" src="img/slide3.jpg" alt=""></div>
+              <div class="swiper-slide hotel-slider__item"><img class="swiper-slide__image" src="img/slide4.jpg" alt=""></div>
+              <div class="swiper-slide hotel-slider__item"><img class="swiper-slide__image" src="img/slide5.jpg" alt=""></div>
             </div>
             <!-- If we need navigation buttons -->
-            <button class="slider-button slider-button--prev"></button>
-            <button class="slider-button slider-button--next"></button>
+            <button class="hotel-slider__button hotel-slider__button--prev"></button>
+            <button class="hotel-slider__button hotel-slider__button--next"></button>
           </div>
           <!-- /.swiper-container -->
-        </div>
-        <!-- /.slider hotel__slider-->
+
         <div class="hotel-right">
           <div class="booking">
             <div class="booking__info">
@@ -169,6 +168,8 @@
     </div>
     <!-- /.container -->
   </section>
+
+
   <section class="newsletter">
     <div class="newsletter-wrapper">
       <h2 class="newsletter-title newsletter__title">
@@ -182,7 +183,99 @@
     </div>
     <!-- /.newsletter-wrapper -->
   </section>
-  <!-- /.newsletter -->
+
+
+  <section class="reviews">
+    <div class="container">
+      <h2 class="reviews__title">What people think about us</h2>
+      <div class="swiper-container reviews-slider">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <div class="reviews-slider__item">
+              <div class="reviews-slider__profile">
+                <img src="img/reviews-avatar.jpg" alt="Photo: Megan Fox" class="reviews-slider__avatar">
+                <h3 class="reviews-slider__username">Megan Fox</h3>
+                <span class="reviews-slider__date">Stayed 38 Nov, 2019</span>
+                <div class="reviews-slider__rating">
+                  <img src="img/Star.svg" alt="star">
+                  <img src="img/Star.svg" alt="star">
+                  <img src="img/Star.svg" alt="star">
+                  <img src="img/Star.svg" alt="star">
+                  <img src="img/Star.svg" alt="star">
+                </div>
+                <!-- /.reviews-slider__rating -->
+              </div>
+              <!-- /.reviews-slider__profile -->
+              <p class="reviews-slider__text">
+                It was very nice hotel with cleanliness. Staff behavior was good and polite. They welcome us very well. Issue was only
+                that Lift was not in working and we were allotted to 3rd floor and amenities articles were in corner of gallery which
+                were giving bad feeling. Breakfast was good and support of the staff was also very nice. Location is not good as per
+                atmosphere, it is very nearby most of the popular places but self location in a narrow street is not good. Overall it
+                was a good experience and could recommend.
+              </p>
+              <!-- /.reviews-slider__text -->
+            </div>
+            <!-- /.reviews-slider__item -->
+          </div>
+          <!-- /.swiper-slide -->
+          <div class="swiper-slide">
+            <div class="reviews-slider__item">
+              <div class="reviews-slider__profile">
+                <img src="img/reviews-avatar1.jpg" alt="Photo: Robert Johns" class="reviews-slider__avatar">
+                <h3 class="reviews-slider__username">Robert Johns</h3>
+                <span class="reviews-slider__date">Stayed 20 Oct, 2020</span>
+                <div class="reviews-slider__rating">
+                  <img src="img/Star.svg" alt="star">
+                  <img src="img/Star.svg" alt="star">
+                  <img src="img/Star.svg" alt="star">
+                  <img src="img/Star.svg" alt="star">
+                  <img src="img/Star.svg" alt="star">
+                </div>
+                <!-- /.reviews-slider__rating -->
+              </div>
+              <!-- /.reviews-slider__profile -->
+              <p class="reviews-slider__text">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione velit, totam magnam minus repudiandae corrupti sapiente numquam porro quae inventore magni, quibusdam voluptates incidunt et nemo aspernatur cumque consectetur? Nisi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis beatae pariatur maxime? Tempore molestias mollitia, quod repellat at quae, odit natus aspernatur minima officia excepturi beatae dicta cupiditate praesentium ipsa!
+              </p>
+              <!-- /.reviews-slider__text -->
+            </div>
+            <!-- /.reviews-slider__item -->
+          </div>
+          <!-- /.swiper-slide -->
+          <div class="swiper-slide">
+            <div class="reviews-slider__item">
+              <div class="reviews-slider__profile">
+                <img src="img/reviews-avatar2.jpg" alt="Photo: Alex Marlow" class="reviews-slider__avatar">
+                <h3 class="reviews-slider__username">Alex Marlow</h3>
+                <span class="reviews-slider__date">Stayed 07 June, 2021</span>
+                <div class="reviews-slider__rating">
+                  <img src="img/Star.svg" alt="star">
+                  <img src="img/Star.svg" alt="star">
+                  <img src="img/Star.svg" alt="star">
+                  <img src="img/Star.svg" alt="star">
+                </div>
+                <!-- /.reviews-slider__rating -->
+              </div>
+              <!-- /.reviews-slider__profile -->
+              <p class="reviews-slider__text">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam fuga, consectetur, dignissimos atque distinctio repudiandae esse dolorem explicabo reiciendis delectus perferendis? Quaerat, expedita. Sequi velit aperiam fuga nobis sint ea. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus eligendi provident nam dolores vitae corrupti, asperiores deleniti qui magnam quod corporis. Enim officia consequuntur, dolorum at aperiam aliquam blanditiis tempore. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate doloribus, ullam natus ea libero amet, incidunt dolorum nemo quas necessitatibus distinctio aut! Dolorum odit officiis quas? Incidunt quisquam velit voluptatum!
+              </p>
+              <!-- /.reviews-slider__text -->
+            </div>
+            <!-- /.reviews-slider__item -->
+          </div>
+          <!-- /.swiper-slide -->
+        </div>
+        <!-- /.swiper-wrapper -->
+        <button class="reviews-slider__button reviews-slider__button--prev"></button>
+        <button class="reviews-slider__button reviews-slider__button--next"></button>
+      </div>
+      <!-- /.reviews-slider -->
+    </div>
+    <!-- /.container -->
+  </section>
+  
+  
   <script src="js/swiper-bundle.min.js"></script>
   <script src="js/main.js"></script>
 </body>
