--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
             <!-- Additional required wrapper -->
             <div class="swiper-wrapper">
               <!-- Slides -->
-              <div class="swiper-slide hotel-slider__item"><img class="swiper-slide__image" src="img/slide1.jpg" alt=""></div>
-              <div class="swiper-slide hotel-slider__item"><img class="swiper-slide__image" src="img/slide2.jpg" alt=""></div>
-              <div class="swiper-slide hotel-slider__item"><img class="swiper-slide__image" src="img/slide3.jpg" alt=""></div>
-              <div class="swiper-slide hotel-slider__item"><img class="swiper-slide__image" src="img/slide4.jpg" alt=""></div>
-              <div class="swiper-slide hotel-slider__item"><img class="swiper-slide__image" src="img/slide5.jpg" alt=""></div>
+              <div class="swiper-slide hotel-slider__item"><img class="hotel-slider__image" src="img/slide1.jpg" alt=""></div>
+              <div class="swiper-slide hotel-slider__item"><img class="hotel-slider__image" src="img/slide2.jpg" alt=""></div>
+              <div class="swiper-slide hotel-slider__item"><img class="hotel-slider__image" src="img/slide3.jpg" alt=""></div>
+              <div class="swiper-slide hotel-slider__item"><img class="hotel-slider__image" src="img/slide4.jpg" alt=""></div>
+              <div class="swiper-slide hotel-slider__item"><img class="hotel-slider__image" src="img/slide5.jpg" alt=""></div>
             </div>
             <!-- If we need navigation buttons -->
             <button class="hotel-slider__button hotel-slider__button--prev"></button>
