fixed: distance stars for feedback+scrool

--- a/index.html
+++ b/index.html
@@ -226,11 +226,11 @@
                 <h3 class="reviews-slider__username">Robert Johns</h3>
                 <span class="reviews-slider__date">Stayed 20 Oct, 2020</span>
                 <div class="reviews-slider__rating">
-                  <img src="img/Star.svg" alt="star">
-                  <img src="img/Star.svg" alt="star">
-                  <img src="img/Star.svg" alt="star">
-                  <img src="img/Star.svg" alt="star">
-                  <img src="img/Star.svg" alt="star">
+                  <img src="img/Star.svg" alt="star" class="reviews-slider__stars">
+                  <img src="img/Star.svg" alt="star" class="reviews-slider__stars">
+                  <img src="img/Star.svg" alt="star" class="reviews-slider__stars">
+                  <img src="img/Star.svg" alt="star" class="reviews-slider__stars">
+                  <img src="img/Star.svg" alt="star" class="reviews-slider__stars">
                 </div>
                 <!-- /.reviews-slider__rating -->
               </div>
