--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
       <!-- /.card -->
       <div class="card activities__card">
         <img src="img/activity-3.jpg" alt="Tamarind falls hiking trip - full day" class="card__image">
-        <h3 class="card__title">Tamarind falls hiking trip - full day</h3>
+        <h3 class="card__title card__fix">Tamarind falls hiking trip - full day</h3>
         <button class="card__button">Book Now</button>
       </div>
       <!-- /.card -->
