create: commute but&info for footer

--- a/index.html
+++ b/index.html
@@ -393,8 +393,10 @@
             <input type="text" class="input footer__input" placeholder="Your Full Name*">
             <input type="text" class="input footer__input" placeholder="Phone Number*">
             <textarea class="footer__message" cols="30" rows="10" placeholder="Message"></textarea>
-            <button class="button footer__button" type="submit">Send</button>
+            <div class="footer__bi">
+              <button class="button footer__button" type="submit">Send</button>
             <span class="footer__info">* Required Fields</span>
+          </div>
           </form>
         </div>
         <!-- /.footer__contact-form -->
