--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header class="navbar">
+  <header class="navbar navbar--mobile_fixed">
     <div class="container">
       <div class="navbar-top">
         <a href="#" class="logo">
@@ -21,7 +21,7 @@
            class="logo__image">
         </a>
 
-        <form action="#" class="search navbar__search">
+        <form action="#" class="search navbar__search navbar__search--mobile_hidden">
           <input type="text" class="search__input"
           placeholder="Search Location">
           <button class="search__button">
@@ -29,7 +29,7 @@
           </button>
         </form>
 
-       <a href="#" class="user navbar__user">
+       <a href="#" class="user navbar__user navbar__user--mobile_hidden">
          <img src="img/user.jpg" alt="Avatar: Nathan" class="user__avatar"/>
          <span class="user__name">Nathan</span>
        </a>
@@ -43,9 +43,23 @@
       <!-- /.navbar-top -->
     </div>
     <!-- /.container -->
-    <div class="navbar-buttom">
+    <div class="navbar-bottom">
       <div class="container">
           <ul class="navbar-menu">
+            <li class="navbar-menu__item navbar-menu__item--mobile_visible">
+              <a href="#" class="user navbar__user navbar__user--mobile_visible">
+              <img src="img/user.jpg" alt="Avatar: Nathan" class="user__avatar" />
+              <span class="user__name user__name--light">Nathan</span>
+              </a>
+            </li>
+            <li class="navbar-menu__item navbar-menu__item--mobile_visible">
+              <form action="#" class="search navbar__search navbar__search--mobile_visible">
+              <input type="text" class="search__input" placeholder="Search Location">
+              <button class="search__button">
+                <img src="img/search.svg" alt="Icon: search">
+              </button>
+              </form>
+            </li>
             <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">All Deals</a></li>
             <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Hotels</a></li>
             <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Activities</a></li>
@@ -58,7 +72,7 @@
       </div>
       <!-- /.container -->
     </div>
-    <!-- /.navbar-buttom -->
+    <!-- /.navbar-bottom -->
   </header>
   <nav class="breadcrumb">
     <div class="container">
